# QClipboardTranslator

./: CMakeLists.txt
includes/: clipboardchkr.h  maintranslatorwin.h  selectdictionarydialog.h  words_finder.h
resources/: resources.qrc  win_res.rc
src/: clipboardchkr.cpp  main.cpp  maintranslatorwin.cpp  qglobalshortcut.cc  qglobalshortcut_win.cc  selectdictionarydialog.cpp  words_finder.cpp
src/forms/: maintranslatorwin.ui  selectdictionarydialog.ui
